Fixed page descriptions

--- a/site/contact.html
+++ b/site/contact.html
@@ -6,12 +6,12 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Free Books о нас - онлайн маркетплейс и кэшбэк сервис, помогающий людям покупать книги дёшево и выгодно.Кэшбэк будет начислен магазином партнёром - только после оплаты и получения товара. Кэшбэк будет начислен только в случае, если покупка была совершена после перехода на сайт партнёра с помощью кнопки: Купить на [магазин партнёра].">
+    <meta name="description" content="Happy Vehicle о нас - онлайн маркетплейс и кэшбэк сервис, помогающий людям покупать товары для авто и мото дёшево и выгодно.Кэшбэк будет начислен магазином партнёром - только после оплаты и получения товара. Кэшбэк будет начислен только в случае, если покупка была совершена после перехода на сайт партнёра с помощью кнопки: Купить на [магазин партнёра].">
     <meta name="author" content="">
     <link rel="icon" href="/style/images/icon.jpg">
     <link href="../style/fonts/fonts.css" rel="stylesheet">
 
-    <title>Free Books - наши контакты</title>
+    <title>Happy Vehicle - наши контакты</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../style/css/bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -20,23 +20,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" media="screen" />
     <link rel="stylesheet" href="../style/css/style.css">
     <link rel="stylesheet" href="../style/css/owl.css">
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function (m, e, t, r, i, k, a) {
-            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
-            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-        ym(71071258, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/71071258" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
@@ -54,7 +38,7 @@
     <header class="">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><h2>Free <em>Books</em></h2></a>
+                <a class="navbar-brand" href="index.html"><h2>Happy <em>Vehicle</em></h2></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -66,7 +50,7 @@
                             </a>
                         </li>
 
-                        <li class="nav-item"><a class="nav-link" href="products.html">Книги</a></li>
+                        <li class="nav-item"><a class="nav-link" href="products.html">Товары</a></li>
                         <li class="nav-item"><a class="nav-link" href="coupons.html">Акции</a></li>
 
                         <li class="nav-item active"><a class="nav-link" href="contact.html">Контакты <span class="sr-only">(current)</span></a></li>
@@ -96,7 +80,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-heading">
-                        <h2>Информация о Free Books</h2>
+                        <h2>Информация о Happy Vehicle</h2>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -108,12 +92,12 @@
                     <div class="left-content">
                         <h4>О нас</h4>
                         <p>
-                            Free Books - онлайн маркетплейс и кэшбэк сервис, помогающий людям покупать книги дёшево и выгодно.
+                            Happy Vehicle - онлайн маркетплейс и кэшбэк сервис, помогающий людям покупать товары для авто и мото дёшево и выгодно.
                             Мы не продаём товары, а только предоставляем Вам выгодные скидки, акции и кэшбэк.
                             Совершая покупку - Вы напрямую взаимодействуете с магазином-партнёром. 
                             <br />
                             <br />
-                            Free Books - является частью поисковика товаров <a href="https://ufostore.netlify.app/">Ufo Store</a>.
+                            Happy Vehicle - является частью поисковика товаров <a href="https://ufostore.netlify.app/">Ufo Store</a>.
                             Наша почта для связи: <a href="mailto:jj0hn8lack@yandex.ru"> jj0hn8lack@yandex.ru</a>
                         </p>
                         <ul class="social-icons">
@@ -150,7 +134,7 @@
                     <br />
                     <h5>Скидки и акции</h5>
 
-                    <p>Free Books - предоставляет доступ к уникальным скидкам и акциям наших партнёров. Скидка или акция будет доступна только после нажатия на кнопку "Активироать" у выбанного Вами купона.</p>
+                    <p>Happy Vehicle - предоставляет доступ к уникальным скидкам и акциям наших партнёров. Скидка или акция будет доступна только после нажатия на кнопку "Активироать" у выбанного Вами купона.</p>
 
                 </div>
             </div>
@@ -162,7 +146,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="inner-content">
-                        <p>Copyright © 2020 Free Books - все права защищены </p>
+                        <p>Copyright © 2020 Happy Vehicle - все права защищены </p>
                     </div>
                 </div>
             </div>
