--- a/site/coupons.html
+++ b/site/coupons.html
@@ -6,12 +6,12 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Скидки, купоны и акции от Free Books. Самые выгодные и эксклюзивные скидки от крупных книжных магазинов только у нас! Все купоны актуальны на текущий день.">
+    <meta name="description" content="Скидки, купоны и акции от Happy Vehicle. Самые выгодные и эксклюзивные скидки от крупных книжных магазинов только у нас! Все купоны актуальны на текущий день.">
     <meta name="author" content="">
     <link rel="icon" href="/style/images/icon.jpg">
     <link href="../style/fonts/fonts.css" rel="stylesheet">
 
-    <title>Купоны и акции - Free Books </title>
+    <title>Купоны и акции - Happy Vehicle </title>
 
     <!-- Bootstrap core CSS -->
     <link href="../style/css/bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -20,23 +20,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" media="screen" />
     <link rel="stylesheet" href="../style/css/style.css">
     <link rel="stylesheet" href="../style/css/owl.css">
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function (m, e, t, r, i, k, a) {
-            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
-            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-        ym(71071258, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/71071258" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
@@ -54,7 +38,7 @@
     <header class="">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><h2>Free <em>Books</em></h2></a>
+                <a class="navbar-brand" href="index.html"><h2>Happy <em>Vehicle</em></h2></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -66,7 +50,7 @@
                             </a>
                         </li>
 
-                        <li class="nav-item"><a class="nav-link" href="products.html">Книги </a></li>
+                        <li class="nav-item"><a class="nav-link" href="products.html">Товары </a></li>
                         <li class="nav-item active"><a class="nav-link" href="coupons.html">Акции <span class="sr-only">(current)</span></a></li>
 
                         <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
@@ -125,7 +109,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="inner-content">
-                        <p>Copyright © 2020 Free Books - все права защищены </p>
+                        <p>Copyright © 2020 Happy Vehicle - все права защищены </p>
                     </div>
                 </div>
             </div>
