--- a/site/index.html
+++ b/site/index.html
@@ -6,12 +6,12 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Free Books - онлайн маркетплейс и кэшбэк сервис, помогающий людям покупать книги дёшево и выгодно.">
+    <meta name="description" content="Happy Vehicle - онлайн маркетплейс и кэшбэк сервис, товаров для авто и мото.">
     <meta name="author" content="">
     <link rel="icon" href="/style/images/icon.jpg">
     <link href="../style/fonts/fonts.css" rel="stylesheet">
 
-    <title>Free Books - книги, акции, кэшбэк</title>
+    <title>Happy Vehicle - скидки, акции, кэшбэк</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../style/css/bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -20,23 +20,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" media="screen" />
     <link rel="stylesheet" href="../style/css/style.css">
     <link rel="stylesheet" href="../style/css/owl.css">
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function (m, e, t, r, i, k, a) {
-            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
-            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-        ym(71071258, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/71071258" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
@@ -53,7 +37,7 @@
     <header class="">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><h2>Free <em>Books</em></h2></a>
+                <a class="navbar-brand" href="index.html"><h2>Happy <em>Vehicle</em></h2></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="fa fa-bars"></span>
                 </button>
@@ -66,7 +50,7 @@
                             </a>
                         </li>
 
-                        <li class="nav-item"><a class="nav-link" href="products.html">Книги</a></li>
+                        <li class="nav-item"><a class="nav-link" href="products.html">Товары</a></li>
                         <li class="nav-item"><a class="nav-link" href="coupons.html">Акции</a></li>
 
                         <li class="nav-item"><a class="nav-link" href="contact.html">Контакты</a></li>
@@ -82,19 +66,19 @@
         <div class="owl-banner owl-carousel">
             <div class="banner-item-01">
                 <div class="text-content">
-                    <h4>Самые выгодные предложеня от Free Books!</h4>
+                    <h4>Самые выгодные предложеня от Happy Vehicle!</h4>
                     <h2>Скидки, акции, купоны, кэшбэк</h2>
                 </div>
             </div>
             <div class="banner-item-02">
                 <div class="text-content">
-                    <h4>Самые выгодные предложеня от Free Books!</h4>
+                    <h4>Самые выгодные предложеня от Happy Vehicle!</h4>
                     <h2>Скидки, акции, купоны, кэшбэк</h2>
                 </div>
             </div>
             <div class="banner-item-03">
                 <div class="text-content">
-                    <h4>Самые выгодные предложеня от Free Books!</h4>
+                    <h4>Самые выгодные предложеня от Happy Vehicle!</h4>
                     <h2>Скидки, акции, купоны, кэшбэк</h2>
                 </div>
             </div>
@@ -107,8 +91,8 @@
             <div class="row" id="latestProducts">
                 <div class="col-md-12">
                     <div class="section-heading">
-                        <h2>Книги</h2>
-                        <a href="products.html">Все книги <i class="fa fa-angle-right"></i></a>
+                        <h2>Наши предложения</h2>
+                        <a href="products.html">Все товары <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
 
@@ -126,7 +110,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="left-content">
-                        <p>Free Books - книжный онлайн маркетплэйс с выгодными условиями и предложениями. У нас Вы найдёте:</p>
+                        <p>Happy Vehicle - книжный онлайн маркетплэйс с выгодными условиями и предложениями. У нас Вы найдёте:</p>
                         <ul class="featured-list">
                             <li><a href="#">Эксклюзивные купоны и акции наших партнёров</a></li>
                             <li><a href="#">Кэшбэк на большинство товаров</a></li>
@@ -259,7 +243,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="inner-content">
-                        <p>Copyright © 2020 Free Books - все права защищены </p>
+                        <p>Copyright © 2020 Happy Vehicle - все права защищены </p>
                     </div>
                 </div>
             </div>
