--- a/site/product-details.html
+++ b/site/product-details.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/style/images/icon.jpg">
     <link href="/style/fonts/fonts.css" rel="stylesheet">
 
-    <title>Free Books</title>
+    <title>Happy Vehicle</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/style/css/bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -18,23 +18,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" media="screen" />
     <link rel="stylesheet" href="/style/css/style.css">
     <link rel="stylesheet" href="/style/css/owl.css">
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function (m, e, t, r, i, k, a) {
-            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
-            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-        ym(71071258, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/71071258" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
@@ -52,7 +36,7 @@
     <header class="">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="/index.html"><h2>Free <em>Books</em></h2></a>
+                <a class="navbar-brand" href="/index.html"><h2>Happy <em>Vehicle</em></h2></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -64,7 +48,7 @@
                             </a>
                         </li>
 
-                        <li class="nav-item active"><a class="nav-link" href="/products.html">Книги <span class="sr-only">(current)</span></a></li>
+                        <li class="nav-item active"><a class="nav-link" href="/products.html">Товары <span class="sr-only">(current)</span></a></li>
                         <li class="nav-item"><a class="nav-link" href="/coupons.html">Акции</a></li>
 
                         <li class="nav-item"><a class="nav-link" href="/contact.html">Контакты</a></li>
@@ -145,7 +129,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="inner-content">
-                        <p>Copyright © 2020 Free Books - все права защищены </p>
+                        <p>Copyright © 2020 Happy Vehicle - все права защищены </p>
                     </div>
                 </div>
             </div>
