--- a/site/product-details.html
+++ b/site/product-details.html
@@ -65,7 +65,7 @@
                 <div class="col-md-12">
                     <div class="text-content">
                         <h4>Один клик отделяет вас от выгодной покупки</h4>
-                        <h2>Книга почти у вас в руках</h2>
+                        <h2>Успей купить товар выгодно</h2>
                     </div>
                 </div>
             </div>
