--- a/site/products.html
+++ b/site/products.html
@@ -66,7 +66,7 @@
                 <div class="col-md-12">
                     <div class="text-content">
                         <h4>У нас самые выгодные условия</h4>
-                        <h2>Книги</h2>
+                        <h2>Товары</h2>
                     </div>
                 </div>
             </div>
