--- a/site/index.html
+++ b/site/index.html
@@ -133,7 +133,7 @@
             <div class="row" id="couponsIndexBox">
                 <div class="col-md-12">
                     <div class="section-heading">
-                        <h2 style="color:black;">Купоны и акции</h2>
+                        <h2>Купоны и акции</h2>
 
                         <a href="coupons.html">Все акции <i class="fa fa-angle-right"></i></a>
                     </div>
