--- a/site/product-details.html
+++ b/site/product-details.html
@@ -116,7 +116,7 @@
                 <div class="col-md-12">
                     <div class="section-heading">
                         <h2>Похожие товары</h2>
-                        <a href="products.html">Все книги <i class="fa fa-angle-right"></i></a>
+                        <a href="products.html">Все товары <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
 
