Added to search

--- a/site/coupons.html
+++ b/site/coupons.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Скидки, купоны и акции от Happy Vehicle. Самые выгодные и эксклюзивные скидки от крупных книжных магазинов только у нас! Все купоны актуальны на текущий день.">
+    <meta name="description" content="Скидки, купоны и акции от Happy Vehicle. Самые выгодные и эксклюзивные скидки только у нас! Все купоны актуальны на текущий день.">
     <meta name="author" content="">
     <link rel="icon" href="/style/images/icon.jpg">
     <link href="../style/fonts/fonts.css" rel="stylesheet">
