--- a/site/index.html
+++ b/site/index.html
@@ -157,8 +157,8 @@
                                 <i class="fa fa-user"></i>
                             </div>
                             <div class="down-content">
-                                <h4>Mirshat</h4>
-                                <p class="n-m"><em>"Широкий ассортимент, приемлемые цены"</em></p>
+                                <h4>Dadonushka</h4>
+                                <p class="n-m"><em>"Хорошие шины позволяющие уверенно ехать по зимней дороге."</em></p>
                             </div>
                         </div>
 
@@ -167,8 +167,8 @@
                                 <i class="fa fa-user"></i>
                             </div>
                             <div class="down-content">
-                                <h4>historian56</h4>
-                                <p class="n-m"><em>"Большой ассортимент методической и учебной литературы."</em></p>
+                                <h4>Arabella1918</h4>
+                                <p class="n-m"><em>"Качественные товары, приятные цены."</em></p>
                             </div>
                         </div>
 
@@ -177,38 +177,8 @@
                                 <i class="fa fa-user"></i>
                             </div>
                             <div class="down-content">
-                                <h4>Antony Davis</h4>
-                                <p class="n-m"><em>"Огромный выбор познавательной, учебной, научной литературы. Торжество нон-фикшн. Уютная обстановка для чтения и выбора. Уникальный персонал."</em></p>
-                            </div>
-                        </div>
-
-                        <div class="service-item">
-                            <div class="icon">
-                                <i class="fa fa-user"></i>
-                            </div>
-                            <div class="down-content">
-                                <h4>hardwor</h4>
-                                <p class="n-m"><em>"Даже при большом ассортименте могут отсутствовать некоторые сборники..."</em></p>
-                            </div>
-                        </div>
-
-                        <div class="service-item">
-                            <div class="icon">
-                                <i class="fa fa-user"></i>
-                            </div>
-                            <div class="down-content">
-                                <h4>Фармацевтяшка</h4>
-                                <p class="n-m"><em>"Большой выбор учебной, познавательной и художественной литературы, на многие у них действует скидка"</em></p>
-                            </div>
-                        </div>
-
-                        <div class="service-item">
-                            <div class="icon">
-                                <i class="fa fa-user"></i>
-                            </div>
-                            <div class="down-content">
-                                <h4>СПБ Оля</h4>
-                                <p class="n-m"><em>"Много красиво иллюстрированных книг, подарки, отличный ассортимент товаров, приятные цены."</em></p>
+                                <h4>ANESTEZIST31</h4>
+                                <p class="n-m"><em>"цена, качество, удобство"</em></p>
                             </div>
                         </div>
                     </div>
