--- a/site/products.html
+++ b/site/products.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Список доступных книг наших партнёров на Happy Vehicle! Не упусти свой шанс совершить вгодную покупку.">
+    <meta name="description" content="Список доступных товаров наших партнёров на Happy Vehicle! Не упусти свой шанс совершить вгодную покупку.">
     <link rel="icon" href="/style/images/icon.jpg">
     <link href="../style/fonts/fonts.css" rel="stylesheet">
 
